src/index.scss
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

* {
  color: #484848;
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  user-select: none;
  outline: none;
  font-family: Roboto, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  

  &::-webkit-scrollbar {
    width: 10px;

    @media (max-width: 500px) {
      width: 5px;
    }

    &-button {
      display: none;
    }

    &-track { 
      background: rgba(#000000, .05);
    }

    &-thumb {
      background: rgba(#000000, .05);

      &:hover {
        background: rgba(#000000, .1);
      }
    }
  }
}

body {
  background-color: #f8f8f8;
  padding-top: 80px;
}

.app {
  position: relative;
  min-height: calc(100vh - 80px);
}

.link {
  border: none;
  background-color: #00000000;
  text-decoration: none;
  cursor: pointer;
  display: inline-flex;
  overflow: hidden;
  flex-direction: column;
  color: #03a9f4;

  &::after {
    content: '';
    opacity: 0;
    height: 1px;
    transform: scaleX(0);
    background-color: #03a9f4;
    transition: .3s ease-in-out;
  }
  
  &:hover {
    &::after {
      transform: scaleX(1);
      opacity: 1;
    }
  }

  &__grey {
    color: #484848;

    &::after {
      background-color: #484848;
    }
  }

  &__white {
    color: #ffffff;

    &::after {
      background-color: #ffffff;
    }
  }
}

.button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  border: none;
  border-radius: 10px;
  background: linear-gradient(90deg,#03a9f4,#00bcd4);
  padding: 10px 30px;
  color: #ffffff;
  font-size: 16px;
  text-transform: uppercase;
  cursor: pointer;
  transition: .3s ease-in-out;

  &:not(:disabled):hover {
    opacity: .8;
  }

  &:disabled {
    cursor: not-allowed;
    filter: grayscale(1);
  }

  &__big{

  }
}

.form {
  &-text{
    font-size: 18px;
  }
}

.input {
  border-radius: 10px;
  border: 2px #039BE5 solid;
  padding: 10px;
  width: 100%;
  font-size: 16px;
  transition: .15s ease-in-out;

  &:disabled {
    border-color: #9a9a9a;
    color: #9a9a9a;
  }
}

.table {
  border-collapse: collapse;
  width: 100%;

  &_wrapper {
    border-radius: 10px;
    overflow: hidden;
    border: 1px solid #dadada;
  }

  td {
    border: 1px solid #dadada;
    padding: 10px;

    &:first-child {
      border-left: none;
    }
    &:last-child {
      border-right: none;
    }
  }

  tr:first-child td{
    border-top: none;
  }

  tr:last-child td{
    border-bottom: none;
  }
}
.page {
  max-width: 1600px;
  margin: 0px auto;
  padding: 20px;

  @media (max-width: 500px) {
    padding: 10px;
  }
}

